plugins {
    id 'com.android.application' version '8.2.1'
    id 'org.jetbrains.kotlin.android' version '1.8.10'
    id 'org.jetbrains.kotlin.plugin.serialization' version '1.8.10'
    id 'kotlin-parcelize'
    id 'org.jetbrains.dokka' version '1.9.20'
}

android {
    namespace 'com.example.earzikimarketplace'

    compileSdk 33
    buildFeatures.buildConfig = true
    defaultConfig {
        applicationId "com.example.earzikimarketplace"
        minSdk 23
        targetSdk 33
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        vectorDrawables.useSupportLibrary = true
    }
    android {
        bundle {
            language {
                enableSplit = false
            }
        }
    }

    buildTypes {
        debug {
            buildConfigField 'String', "ApiKey", eArziki_APIKEY
            resValue 'string', "api_key", eArziki_APIKEY
            buildConfigField 'String', "ApiUrl", eArziki_URL
            resValue 'string', "api_url", eArziki_URL
        }
        release {
            minifyEnabled true
            proguardFiles(getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro')
            buildConfigField 'String', "ApiKey", eArziki_APIKEY
            resValue 'string', "api_key", eArziki_APIKEY
            buildConfigField 'String', "ApiUrl", eArziki_URL
            resValue 'string', "api_url", eArziki_URL
        }
    }

    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_1_8
        targetCompatibility = JavaVersion.VERSION_1_8
    }

    kotlinOptions {
        jvmTarget = '1.8'
    }

    buildFeatures {
        compose true
    }

    composeOptions {
        kotlinCompilerExtensionVersion '1.4.3'
    }

    testOptions {
        unitTests {
            //useJUnitPlatform()
            includeAndroidResources = true
            all {
                jvmArgs '-noverify', '--add-opens', 'java.base/java.lang=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED'
            }
        }
    }

    packagingOptions {
        resources {
            excludes += '/META-INF/{AL2.0,LGPL2.1}'
        }
    }
}

dokkaHtml {
    outputDirectory.set(file("../documentation/html"))
}

dokkaGfm {
    outputDirectory.set(file("../documentation/markdown"))
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

dependencies {
    implementation 'androidx.core:core-ktx:1.8.0'
    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
    implementation 'androidx.activity:activity-compose:1.5.1'
    implementation platform('androidx.compose:compose-bom:2022.10.00')
    implementation 'androidx.compose.ui:ui:1.4.0'
    implementation 'androidx.compose.ui:ui-graphics'
    implementation 'androidx.compose.ui:ui-tooling-preview'
    implementation 'androidx.compose.material3:material3'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    testImplementation 'org.testng:testng:6.9.6'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
    debugImplementation 'androidx.compose.ui:ui-tooling'
    debugImplementation 'androidx.compose.ui:ui-test-manifest'

    implementation platform("io.github.jan-tennert.supabase:bom:1.0.1")
    implementation 'io.github.jan-tennert.supabase:postgrest-kt'
    implementation 'io.github.jan-tennert.supabase:gotrue-kt'
    implementation 'io.github.jan-tennert.supabase:storage-kt'


    implementation 'io.ktor:ktor-client-android:2.3.1'

    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1'
    implementation 'androidx.compose.foundation:foundation'
    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:'
    implementation 'androidx.compose.runtime:runtime'
    implementation 'androidx.compose.runtime:runtime-livedata'
    implementation 'androidx.navigation:navigation-compose:2.5.3'

    implementation "com.google.accompanist:accompanist-systemuicontroller:0.27.0"
    implementation "io.coil-kt:coil-compose:2.2.0"
    implementation 'androidx.appcompat:appcompat:1.6.1'

    androidTestImplementation 'androidx.arch.core:core-testing:2.2.0'
    testImplementation 'org.mockito:mockito-core:4.0.0'
    testImplementation 'androidx.test:core:1.5.0'
    testImplementation 'org.robolectric:robolectric:4.12'
    testImplementation 'org.mockito.kotlin:mockito-kotlin:4.0.0'
    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
    testImplementation 'io.mockk:mockk:1.12.0'
    testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.1")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.1")
    testImplementation "androidx.arch.core:core-testing:2.2.0"
    testImplementation("org.jetbrains.kotlin:kotlin-test-junit:1.7.10")

    dokkaPlugin 'org.jetbrains.dokka:android-documentation-plugin:1.9.20'

}
